TelegramUtil revised